updated api token controll during login
request that will be comming from different sources will be checked and
assigned api keys with appropriate validity period. each that requires
api token of validity period above 24 hours will come with x-app-id
header. x-app-secret may be added later for more security.
