# src/api/middlewares/auth.ts
@@ -1,6 +1,7 @@
 import logger from '../utils/logger';
 import { JsonWebTokenError } from 'jsonwebtoken';
 import {verifyToken} from '../utils/tokenizer';
+import { NEXT_APP_ID } from '../../config';
 
 // create an instance from jsonwebtokenError to include code
 export class JsonWebTokenError2 extends JsonWebTokenError {
@@ -17,6 +18,9 @@ async function decodeTokenMiddleware(req: any): Promise<void> {
     if (token) {
       try {
         req.decodedUser = await verifyToken(token);
+        req.APP_ID = req.headers['x-app-id'];
+        req.IS_NEXT_APP = req.headers.APP_ID === NEXT_APP_ID;
+        
         return;
       } catch (err: any) {
         throw new JsonWebTokenError2('Invalid token', 401);
